force-app/main/default/objects/IbdUnitAttempt__e.object
<CustomObject>
    <description>Inbound unit attempts (subjects) that the student is currently associated with, relative to a course attempt</description>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <description>Academic year which the unit is attempted in.</description>
        <label>Academic Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achieved_Credit_Points__c</fullName>
        <label>Achieved Credit Points</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Administrative_Unit_Status__c</fullName>
        <label>Administrative Unit Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CI_Sequence_Number__c</fullName>
        <description>Calendar sequence number</description>
        <label>CI Sequence Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calendar_Type__c</fullName>
        <description>Type of the academic calendar associated with the unit attempt. This is referrenced in forming the External ID of Unit Attempt.</description>
        <label>Calendar Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Course code which the unit is attempted under by the student.</description>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <description>Date when the unit attempt has been discontinued for the student.</description>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFTSL__c</fullName>
        <label>EFTSL</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_Credit_Points__c</fullName>
        <label>Enrolled Credit Points</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolment_Date__c</fullName>
        <description>Date when the unit attempt is enrolled in for the student.</description>
        <label>Enrolment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <description>defines the type of event that the Platform Event record does. Could either be insert, update, or delete. Otherwise, an error will be logged in PEBusinessExcLog for any unknown event types.</description>
        <label>Event Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grade__c</fullName>
        <description>Grade given to the student on completed unit attempt.</description>
        <label>Grade</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Teaching location code of the unit attempt.</description>
        <label>Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mark__c</fullName>
        <description>Mark given to the student on completed unit attempt.</description>
        <label>Mark</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Code__c</fullName>
        <label>Org Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Description__c</fullName>
        <description>Org Unit (Faculty)</description>
        <label>Org Unit Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Org_Unit_Start_Date__c</fullName>
        <description>PK of Org Unit (Account)</description>
        <label>Org Unit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_Date__c</fullName>
        <description>Date when the outcome of the unit attempt has been set.</description>
        <label>Outcome Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outcome_Finalised__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Confirms if the outcome has been finalised for the unit attempt.</description>
        <label>Outcome Finalised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Override_Credit_Points_Reason__c</fullName>
        <description>Describe the reason behind the credit points override.</description>
        <label>Override Credit Points Reason</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>The person ID of the student. Will be used to derive the value for Callista_External_Id__c in Course Attempt</description>
        <label>Person ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_Type__c</fullName>
        <label>Result Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rule_Waived_Comments__c</fullName>
        <description>Comments behind the waived rule on the unit attempt.</description>
        <label>Rule Waived Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rule_Waived_Date__c</fullName>
        <description>Date when the waiving of the rule is applied on the unit attempt.</description>
        <label>Rule Waived Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SUA_External_ID__c</fullName>
        <description>External identifier of the student unit attempt. It is a combination of Person I, Unit Code, Calendar Type and Academic Year in the following format:
PERSON_ID-UNIT_CODE-CALENDAR_TYPE-ACADEMIC_YEAR
e.g. 12345678-EDF4122-ACAD-YR-2018</description>
        <label>SUA External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Short_Title__c</fullName>
        <description>Abbreviated unit title</description>
        <label>Short Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_on_Official_Notifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show on Official Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the student&apos;s unit attempt</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Calendar_External_ID__c</fullName>
        <description>Teaching calendar associated to the specific unit attempt.</description>
        <label>Teaching Calendar External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Org_Unit_Code__c</fullName>
        <label>Teaching Org Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teaching_Org_Unit_Description__c</fullName>
        <label>Teaching Org Unit Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Teaching_Org_Unit_Start_Date__c</fullName>
        <label>Teaching Org Unit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Teaching_Period__c</fullName>
        <label>Teaching Period</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Alternative Title in Callista by default. Falls back to unit title if blank.</description>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Class__c</fullName>
        <label>Unit Class</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Code__c</fullName>
        <description>Code of the attempted unit.</description>
        <label>Unit Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Level__c</fullName>
        <label>Unit Level</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Mode__c</fullName>
        <label>Unit Mode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Version__c</fullName>
        <description>Version of the attempted unit.</description>
        <label>Unit Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Updated_At__c</fullName>
        <label>Updated At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_By__c</fullName>
        <label>Updated By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Inbound Unit Attempt</label>
    <pluralLabel>Inbound Unit Attempts</pluralLabel>
</CustomObject>